<resources>
    <string name="app_name">PatGPT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">GPT</string>

    <string name="this_is_the_logo_for_the_app">This is the logo for the app</string>
    <string name="send">Send</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_login">Login</string>
    <string name="this_is_your_content">This is your content</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="dalle">Dall E</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="aboutInfo">Welcome to Pat GPT, your AI-powered companion. Leveraging GPT-3.5 Turbo for text and DALL-E 3 for images, Pat GPT transforms your digital interactions. With local data storage via SQLite, your privacy is our priority. Experience the future of AI with Pat GPT.\n\n\n\n\</string>
    <string name="get_answers">Get Answers</string>
    <string name="get_images">Get an Image</string>
    <string name="menu_dalle">DALL E</string>
    <string name="todo">TODO</string>
    <string name="loading">Loading . . .</string>
    <string name="first_name">First Name</string>
    <string name="textview">TextView</string>
    <string name="profile_image">Profile Image</string>
    <string name="enter_a_name_to_update_your_first_name">Enter a Name to update your first name.</string>
    <string name="edit_first_name">Edit First Name</string>
    <string name="last_name">Last Name</string>
    <string name="edit_last_name">Edit Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="edit_password">Edit Password</string>
    <string name="menu_register">"Registration "</string>
    <string name="action_registar">REGISTER AND SIGN IN</string>
    <string name="action_register">REGISTER AND SIGN IN</string>
    <string name="clear">Clear</string>
    <string name="history">History</string>
    <string name="action_sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="logout">Logout</string>
    <string name="menu_logout">Logout</string>
    <string name="logging_out">Logging Out …</string>
</resources>