<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
<!--        image from  href="https://www.flaticon.com/free-icons/house" -->
        <item
            android:id="@+id/nav_dalle"
            android:icon="@drawable/dalle"
            android:title="@string/dalle" />
        <!--        image from  href="https://www.flaticon.com/free-icons/" -->
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <!--        image from  href="https://www.flaticon.com/free-icons/" -->
        <item
            android:id="@+id/nav_history"
            android:title="@string/history"
            android:icon="@drawable/history"/>
        <!--        image from  href="https://www.flaticon.com/free-icons/" -->

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/about" />
        <!--        image from  href="https://www.flaticon.com/free-icons" -->

<!--        <item-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:icon="@drawable/ic_menu_gallery"-->
<!--            android:title="@string/menu_gallery" />-->
<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_slideshow" />-->
    </group>
</menu>